updated my resume

--- a/static/resume.xhtml
+++ b/static/resume.xhtml
@@ -148,7 +148,9 @@ Used HTML, CSS3, WebGL, JavaScript/AJAX for Web Fontends</li>
 <li class="itemize_item"><a id='magicparlabel-38' />
 Familarity with OS/Platforms like: GNU/Linux(since Linux kernel 2.4), Windows(3.11,4.x,5.x, 6.1), MS-DOS 6.2</li>
 <li class="itemize_item"><a id='magicparlabel-39' />
-Basic understanding of Android application development and usage of ANT</li>
+Basic understanding of Android application development</li>
+<li class="itemize_item"><a id='magicparlabel-25' />
+Very good understanding of x509 Certificate generating and signing with OpenSSL and general certificate use</li>
 <li class="itemize_item"><a id='magicparlabel-40' />
 Good general knowledge of OpenGL, and basic usage with C++</li>
 </ul>
@@ -615,7 +617,11 @@ Professional Exprience</h2>
 <div class="standard"><a id='magicparlabel-840' />
 TouchCommerce, Inc (<a href="http://www.touchcommerce.com/">http://www.touchcommerce.com/</a>) Linux Systems Engineer | January 2013 - Present </div>
 
-<ul class="itemize"><li class="itemize_item"><a id='magicparlabel-841' />
+<ul class="itemize"><li class="itemize_item"><a id='magicparlabel-842' />
+Evaluating new technology and setup proof of concept systems</li>
+<li class="itemize_item"><a id='magicparlabel-843' />
+Setting up Single Sign-On test infrastruture and generating tls certificates</li>
+<li class="itemize_item"><a id='magicparlabel-841' />
 Installing KVM servers on CentOS 6.5 and CentOS 7</li>
 <li class="itemize item"><a id='magicparlabel-836' />
 Linux server Maintenace of Lab and Production Environment using puppet, zabbix</li>
