set overflow-y on the dispArea

--- a/static/test.html
+++ b/static/test.html
@@ -154,10 +154,11 @@ function mainPage() {
 function setMenuHeight() {
   var h = window.innerHeight - (72+24);
   var e = document.getElementById('menu');
+  var d = document.getElementById('dispArea');
   e.style.height = h+'px';
   var f = h - 25;
   e = document.getElementById('foot')
-  e.style.top = f +'px';
+  d.style.height = e.style.top = f +'px';
 }
 </script>
 
@@ -185,7 +186,7 @@ Alchemiestick software repository
 var c = createCorner('field','ltcirc','left','frame','backdrop');
 c.style.left = '100px';
 </script>
-<div id="dispArea" class="backdrop" style="margin-left:115px; padding-top:10px"></div>
+<div id="dispArea" class="backdrop" style="overflow-y:scroll;margin-left:115px; padding-top:10px"></div>
 </div>
 <div id="foot" class="calign" style="height: 24px; text-align: center; font-size: 8pt;">
 <script>
