adding my certificates

--- a/static/main.html
+++ b/static/main.html
@@ -151,6 +151,7 @@ Alchemiestick software repository
 <div id="menu" class="frame menu left" onRedraw="setMenuHeight();">
 <a href="#" onClick="mainPage();">main</a><br/>
 <a href="/?link=resume" target="_blank">my resume</a><br/>
+<a href="#" onClick="ajax_loadContent('dispArea','/?link=certs');">my certificates</a><br/>
 <a href="https://github.com/Katana-Steel/" target="_blank">my github page</a><br/>
 <a href="#" onClick="ajax_loadContent('dispArea','/?link=linsudoku');">Sudoku Solver</a><br/>
 </div>
