--- a/static/certs.html
+++ b/static/certs.html
@@ -5,7 +5,7 @@
 <tr>
 <td align="center">
 <a href="https://plus.google.com/105260676556124015669/posts/D7LpGP1mCpd" target="_blank">
-<img src="https://lh3.googleusercontent.com/-ATpRjimYL00/V5hFHOuXS9I/AAAAAAAAS8o/Xt9uJauZP0c9gLg3SCWQuiZoAmr2M_xRQ/w1590-h1122-p-rw/16%2B-%2B1" />
+<img src="https://lh3.googleusercontent.com/-ATpRjimYL00/V5hFHOuXS9I/AAAAAAAAS8o/Xt9uJauZP0c9gLg3SCWQuiZoAmr2M_xRQ/w1590-h1122-p-rw/16%2B-%2B1" width="90%" />
 </a>
 </td>
 </tr>
