--- a/static/linsudoku.html
+++ b/static/linsudoku.html
@@ -1,7 +1,7 @@
 <table align="center">
-<th>
-<td>sudoku</td>
-</th>
+<tr>
+<th>sudoku</th>
+</tr>
 <tr>
 <td>
  This is a sudoku helper/solver. What it does is
