Added menu json file

--- a/static/test.html
+++ b/static/test.html
@@ -85,6 +85,8 @@ div {
 var menus = [
 {"title":'About Me', 'function':'mainPage', 'args':[]}, 
 {"title":'<a href="/?link=resume" target="_blank">My Resume</a>', 'function':'','args':[]},
+{"title":'My Certificates', 'function': 'ajax_loadContent'
+, 'args':['dispArea', '/?link=certs' ]},
 {"title":'Sudoku Solver', 'function': 'ajax_loadContent'
 , 'args':['dispArea', '/?link=linsudoku' ]}
 ];
