converted appengine to use python3
updated main.html to dynamically load the menu from /menu.json

--- a/static/certs.html
+++ b/static/certs.html
@@ -4,9 +4,12 @@
 </tr>
 <tr>
 <td align="center">SoloLearn C++<br/>
-<a href="https://plus.google.com/105260676556124015669/posts/D7LpGP1mCpd" target="_blank">
 <img src="/img/solo_learn_cpp.jpg" width="90%" />
-</a>
+</td>
+</tr>
+<tr>
+<td align="center">SoloLearn Python<br/>
+<img src="/img/solo_learn_python.jpg" width="90%" />
 </td>
 </tr>
 </table>
