updated my resume

--- a/static/resume.xhtml
+++ b/static/resume.xhtml
@@ -128,13 +128,13 @@ Technical Overview</h2>
 </div>
 
 <ul class="itemize"><li class="itemize_item"><a id='magicparlabel-29' />
-9 years experience with developing stand-alone and server/client applications</li>
-<li class="itemize_item"><a id='magicparlabel-30' />
-9 years Object Oriented Programming with C++/(2.5years)Java/(1 year)Python</li>
-<li class="itemize_item"><a id='magicparlabel-31' />
-4 years of Virtualization with VMWare products, including ESXi4 and linux KVM (on CentOS6/RHEL6)</li>
+15 years Object Oriented Programming with C++/(5years)Java/(5years)Python</li>
 <li class="itemize_item"><a id='magicparlabel-32' />
 10 years System Administration of GNU/Linux systems including complete system setup with but not limited to; Apache web host(and virtual hosts), Postfix Mail server, Ftp, MySQL server, Networks shares and user isolation</li>
+<li class="itemize_item"><a id='magicparlabel-31' />
+9 years experience with developing stand-alone and server/client applications</li>
+<li class="itemize_item"><a id='magicparlabel-30' />
+4 years of Virtualization with linux KVM (on CentOS6/RHEL6)</li>
 <li class="itemize_item"><a id='magicparlabel-33' />
 Very quick study; All my IT knowledge comes from self study and I'm always willing to learn more.</li>
 <li class="itemize_item"><a id='magicparlabel-34' />
@@ -145,21 +145,15 @@ Extensive knowledge in Qt developement</li>
 Created dynamic web applications with PHP+MySQL or Python</li>
 <li class="itemize_item"><a id='magicparlabel-37' />
 Used HTML, CSS3, WebGL, JavaScript/AJAX for Web Fontends</li>
-<li class="itemize_item"><a id='magicparlabel-38' />
-Familarity with OS/Platforms like: GNU/Linux(since Linux kernel 2.4), Windows(3.11,4.x,5.x, 6.1), MS-DOS 6.2</li>
 <li class="itemize_item"><a id='magicparlabel-39' />
-Basic understanding of Android application development</li>
+Basic understanding of Android application development both JAVA and Native</li>
 <li class="itemize_item"><a id='magicparlabel-25' />
 Very good understanding of x509 Certificate generating and signing with OpenSSL and general certificate use</li>
 <li class="itemize_item"><a id='magicparlabel-40' />
 Good general knowledge of OpenGL, and basic usage with C++</li>
 </ul>
-<div class="standard"><a id='magicparlabel-41' />
-</div>
 
 <div class="standard"><a id='magicparlabel-46' />
-
-
 
 <table class="skills"><tbody><tr><td align='center' valign='top' colspan='2'><div class="plain_layout"><a id='magicparlabel-172' />
 Skill Set</div>
@@ -186,7 +180,7 @@ C/C++</div>
 </td>
 
 <td align='center' valign='top'><div class="plain_layout"><a id='magicparlabel-196' />
-11</div>
+10</div>
 </td>
 </tr>
 <tr><td align='left' valign='top'><div class="plain_layout"><a id='magicparlabel-199' />
@@ -218,11 +212,11 @@ STL</div>
 </td>
 
 <td align='left' valign='top'><div class="plain_layout"><a id='magicparlabel-220' />
-OpenGL 1.2, 3.0</div>
+OpenGL</div>
 </td>
 
 <td align='center' valign='top'><div class="plain_layout"><a id='magicparlabel-223' />
-3.5</div>
+3</div>
 </td>
 </tr>
 <tr><td align='left' valign='top'><div class="plain_layout"><a id='magicparlabel-226' />
@@ -306,7 +300,7 @@ Git</div>
 </td>
 
 <td align='center' valign='top'><div class="plain_layout"><a id='magicparlabel-286' />
-3</div>
+4</div>
 </td>
 </tr>
 <tr><td align='left' valign='top'><div class="plain_layout"><a id='magicparlabel-289' />
@@ -357,30 +351,7 @@ Eggdrop</div>
 </div>
 </td>
 </tr>
-<tr><td align='left' valign='top'><div class="plain_layout"><a id='magicparlabel-325' />
-NetBackup 7</div>
-</td>
-
-<td align='left' valign='top'><div class="plain_layout"><a id='magicparlabel-328' />
-</div>
-</td>
-
-<td align='center' valign='top'><div class="plain_layout"><a id='magicparlabel-331' />
-1/2</div>
-</td>
-</tr>
-<tr><td align='left' valign='top'><div class="plain_layout"><a id='magicparlabel-334' />
-PureDisk 6</div>
-</td>
-
-<td align='left' valign='top'><div class="plain_layout"><a id='magicparlabel-337' />
-</div>
-</td>
-
-<td align='center' valign='top'><div class="plain_layout"><a id='magicparlabel-340' />
-1/2</div>
-</td>
-</tr></tbody>
+</tbody>
 </table>
 
 
@@ -439,30 +410,6 @@ CentOS (RHEL)</div>
 
 <td align='center' valign='top'><div class="plain_layout"><a id='magicparlabel-508' />
 2</div>
-</td>
-</tr>
-<tr><td align='left' valign='top'><div class="plain_layout"><a id='magicparlabel-511' />
-</div>
-</td>
-
-<td align='left' valign='top'><div class="plain_layout"><a id='magicparlabel-514' />
-Red Hat Desktop</div>
-</td>
-
-<td align='center' valign='top'><div class="plain_layout"><a id='magicparlabel-517' />
-</div>
-</td>
-</tr>
-<tr><td align='left' valign='top'><div class="plain_layout"><a id='magicparlabel-520' />
-</div>
-</td>
-
-<td align='left' valign='top'><div class="plain_layout"><a id='magicparlabel-523' />
-SuSE Pro/SLES</div>
-</td>
-
-<td align='center' valign='top'><div class="plain_layout"><a id='magicparlabel-526' />
-</div>
 </td>
 </tr>
 <tr><td align='left' valign='top'><div class="plain_layout"><a id='magicparlabel-529' />
@@ -615,7 +562,7 @@ SQLite</div>
 <h2 class="section"><span class="section_label">3</span> <a id='magicparlabel-635' />
 Professional Exprience</h2>
 <div class="standard"><a id='magicparlabel-840' />
-TouchCommerce, Inc (<a href="http://www.touchcommerce.com/">http://www.touchcommerce.com/</a>) Linux Systems Engineer | January 2013 - Present </div>
+Nuance Communication, Inc (<a href="http://www.touchcommerce.com/">http://www.touchcommerce.com/</a>) Principal Linux Systems Engineer | January 2013 - Present </div>
 
 <ul class="itemize"><li class="itemize_item"><a id='magicparlabel-842' />
 Evaluating new technology and setup proof of concept systems</li>
@@ -635,6 +582,8 @@ installing Cloudera Desktop Hadoop 3u5, and upgrading to CDH 4u6 </li>
 setting up eleastic search and logstash on JVM logs </li>
 <li class="itemize item"><a id='magicparlabel-839' />
 maintaining Atlassian products like Stash, Jira, Confluence and Bamboo </li>
+<li class="itemize item"><a id='magicparlabel-839' />
+Migrating automated external DNS from in-house to Google's Anycast cloud DNS</li>
 </ul>
 <div class="standard"><a id='magicparlabel-638' />
 &ldquo;Alchemiestick&rdquo; (<a href="http://www.alchemiestick.net/">http://www.alchemiestick.net/</a>) Self-Employed | November 2002 - Present </div>
