unwrapped menu.json and added minor resume update

--- a/static/resume.xhtml
+++ b/static/resume.xhtml
@@ -562,9 +562,12 @@ SQLite</div>
 <h2 class="section"><span class="section_label">3</span> <a id='magicparlabel-635' />
 Professional Exprience</h2>
 <div class="standard"><a id='magicparlabel-840' />
-Nuance Communication, Inc (<a href="http://www.touchcommerce.com/">http://www.touchcommerce.com/</a>) Principal Linux Systems Engineer | January 2013 - Present </div>
+Nuance Communication, Inc (<a href="http://www.touchcommerce.com/">http://www.touchcommerce.com/</a>) Principal Linux Systems Engineer | October 2016 - Present<br/>
+TouchCommerce, Inc (<a href="http://www.touchcommerce.com/">http://www.touchcommerce.com/</a>) Linux Systems Engineer | January 2013 - October 2016</div>
 
 <ul class="itemize"><li class="itemize_item"><a id='magicparlabel-842' />
+Building Automation scripts in python</li>
+<li class="itemize_item"><a id='magicparlabel-844' />
 Evaluating new technology and setup proof of concept systems</li>
 <li class="itemize_item"><a id='magicparlabel-843' />
 Setting up Single Sign-On test infrastruture and generating tls certificates</li>
