updated default profile and resume added LPI certification
added a guard to the form for setting up promo link

fixed a style defect with naked except in the metrics processing
 and dropping all null id entried from the security scanner.

--- a/static/certs.html
+++ b/static/certs.html
@@ -3,6 +3,12 @@
 <th>My Certifications</th>
 </tr>
 <tr>
+<td align="center">Linux Professional Institute's
+    <a href="https://lpi.org/v/LPI000284513/93hbsnxcdb" target="_blank">LPIC-1</a><br/>
+<img src="/img/lpic-1.png" width="90%" />
+</td>
+</tr>
+<tr>
 <td align="center">SoloLearn C++<br/>
 <img src="/img/solo_learn_cpp.jpg" width="90%" />
 </td>
