--- a/static/create_promo.html
+++ b/static/create_promo.html
@@ -1,5 +1,7 @@
+<div style="padding: 25px; text-align: center;">
 <form id="promo" method="POST" action="/promo_create">
 <input type="text" id="title" name="title" value="Donkey Balls" /><br/>
 <textarea id="msg" name="msg"></textarea><br/>
 <input type="submit" value="create" />
 </form>
+</div>
