--- a/static/profile.html
+++ b/static/profile.html
@@ -1,1 +1,26 @@
-<h1>My main Page</h1><br><br><p>This is the home for my amazing pet projects</p>
+<h1>About Katana Steel</h1>
+<div>
+    I started learning BASIC at 13 on my own and from library book.
+    From there I've been writing software since I was 16. 
+    Starting with simple D&amp;D tools in Word Basic to generate game character sheets.<br/>
+    And as many a teenager I wanted to create VideoGames and got into C and C++.<br/>
+    With my first IT job I got into PHP and QT to create a 
+    <a href="https://github.com/Katana-Steel/CRM_Unity" target="_blank">simple CRM System</a>
+    from scratch building from requirement to requirement, a sort of BDD or FDD(feature drivent development).
+</div></br/>
+<div>
+    Recently I've started tinkering with the defunct/abandoned 
+    <a href="https://github.com/Katana-Steel/lithtech" target="_blank">game enging LithTech</a>
+    with the hope that at somepoint I can play the game F.E.A.R. naitively on my OS of choice.<br/>
+    By finishing up the migration of 
+    <a href="https://docs.xfce.org/apps/xfburn" target="_blank">xfburn</a>
+    to GTK+3 framework I've also taken up maintenance of this project, which is distibuted with
+    pretty much all the Linux distributions that ships the 
+    <a href="https://www.xfce.org/" target="_blank">XFCE desktop</a>.
+</div><br/>
+<div>
+    This web site is the home for some of my pet projects and in
+    the menu bar you will find links to the public git repositories.<br/>
+    <small>If you have a promo link it will store a cookie with the link id and add it to the menu bar
+    for the next 30 days or until you clear your cookies.</small>
+</div>
