--- a/static/profile.html
+++ b/static/profile.html
@@ -1,12 +1,17 @@
 <h1>About Katana Steel</h1>
 <div>
-    I started learning BASIC at 13 on my own and from library book.
-    From there I've been writing software since I was 16. 
+    Hi there, the name's Rene but I go by Katana I've been writing software for more than 15 years.
     Starting with simple D&amp;D tools in Word Basic to generate game character sheets.<br/>
     And as many a teenager I wanted to create VideoGames and got into C and C++.<br/>
+    What I can share is on github.com or gitlab.com (user: Katana-Steel for both).<br/>
+    Lately I've been getting into some game dev first by starting to make the lithtech game engine to build on Linux, then onto some of my own work using Godot.
+</div>
+<div>
     With my first IT job I got into PHP and QT to create a 
     <a href="https://github.com/Katana-Steel/CRM_Unity" target="_blank">simple CRM System</a>
-    from scratch building from requirement to requirement, a sort of BDD or FDD(feature drivent development).
+    from scratch building from requirement to requirement, a sort of BDD or FDD(feature drivent development).<br/>
+    Since 2012 I've been an ops engineer at Touchcommerce then Nuance and now Microsoft.<br/>
+    I have been working in operations for more than 10 years and now looking to get into more of a dev role.<br/>
 </div></br/>
 <div>
     Recently I've started tinkering with the defunct/abandoned 
@@ -16,7 +21,9 @@
     <a href="https://docs.xfce.org/apps/xfburn" target="_blank">xfburn</a>
     to GTK+3 framework I've also taken up maintenance of this project, which is distibuted with
     pretty much all the Linux distributions that ships the 
-    <a href="https://www.xfce.org/" target="_blank">XFCE desktop</a>.
+    <a href="https://www.xfce.org/" target="_blank">XFCE desktop</a>.<br/>
+    My first Godot project is a <a href="https://gitlab.com/Katana-Steel/lunar-lander" target="_blank">Lunar Lander</a> clone that is automatically build with
+    gitlab pipelines and released to <a href="https://katana-steel.itch.io/lunarlander" target="_blank">itch.io</a>.
 </div><br/>
 <div>
     This web site is the home for some of my pet projects and in
@@ -24,3 +31,4 @@
     <small>If you have a promo link it will store a cookie with the link id and add it to the menu bar
     for the next 30 days or until you clear your cookies.</small>
 </div>
+
