updated xfburn's link

--- a/static/profile.html
+++ b/static/profile.html
@@ -18,7 +18,7 @@
     <a href="https://github.com/Katana-Steel/lithtech" target="_blank">game enging LithTech</a>
     with the hope that at somepoint I can play the game F.E.A.R. naitively on my OS of choice.<br/>
     By finishing up the migration of 
-    <a href="https://docs.xfce.org/apps/xfburn" target="_blank">xfburn</a>
+    <a href="https://docs.xfce.org/apps/xfburn/start" target="_blank">xfburn</a>
     to GTK+3 framework I've also taken up maintenance of this project, which is distibuted with
     pretty much all the Linux distributions that ships the 
     <a href="https://www.xfce.org/" target="_blank">XFCE desktop</a>.<br/>
