--- a/static/test.html
+++ b/static/test.html
@@ -49,8 +49,7 @@ div {
   padding: 0px;
 }
 </style>
-<script src="/js/ajax.js" type="text/javascript"></script>
-<script src="/js/ajax-dynamic-content.js" type="text/javascript"></script>
+<script src="/js/async.js" type="text/javascript"></script>
 
 <template id="ltcirc">
  <svg height="24" width="24">
